k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devdocs
  namespace: devdocs
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9292
      nodePort: 31400
  selector:
    app: devdocs
